# pa_mobile_robot

./: CMakeLists.txt  README.md  frames.gv  pa_exploration_node.cpp  pa_exploration_slam_node.cpp  pa_slam_node.cpp  package.xml
launch/: pa_exploration_slam_with_gazebo.launch  pa_exploration_slam_with_karadoc.launch  pa_exploration_slam_with_perceval.launch  pa_exploration_with_gazebo.launch  pa_slam_with_demo_bag.launch  romlux_slam.launch
rviz/: pa_exploration_gazebo.rviz  pa_exploration_slam_gazebo.rviz  pa_exploration_slam_karadoc.rviz  pa_slam_rosbag.rviz
simulation/models/simple_floor/: model.config  model.sdf
simulation/urdf/: differential_robot.xacro  differential_robot_gazebo_plugins.xacro
simulation/worlds/: simple.world
src/: pa_exploration_node.cpp  pa_exploration_slam_node.cpp  pa_slam_node.cpp
src/exploration/: PaAStar.cpp  PaAStar.h  PaExplorationMap.cpp  PaExplorationMap.h  PaNode.cpp  PaNode.h  PaPoint2Dd.cpp  PaPoint2Dd.h  PaPoint2Di.cpp  PaPoint2Di.h
src/init_functions/: init_pa_exploration_node.h  init_pa_exploration_slam_node.h  init_pa_slam_node.h
src/slam/: PaSlam_Map.cpp
src/tools/: odom2path_node.cpp
